--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Meu Portfólio</title>
 </head>
 <body>
+    <header>
     <h1>Eu sou a professora <em>Monalize</em>, sou professora de <b>Informática</b> em Londrina.</h1>
     <p>Sou mãe da Melissa e tenho uma cachorrinha, a Skie.</p>
     <p>Sou professora formadora de Programação e aqui estão meus projetos desenvolvidos no GE. </p>
@@ -16,6 +17,6 @@
         <li>Javascript</li>
         <li>Python</li>
     </ol>
-
+    </header>
 </body>
 </html>
