--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <header>
+    <img src="./imagem/Mona_prof.png" alt="Avatar da Prof Monalize" width="200">
     <h1>Eu sou a professora <em>Monalize</em>, sou professora de <b>Informática</b> em Londrina.</h1>
     <p>Sou mãe da Melissa e tenho uma cachorrinha, a Skie.</p>
     <p>Sou professora formadora de Programação e aqui estão meus projetos desenvolvidos no GE. </p>
@@ -18,5 +19,11 @@
         <li>Python</li>
     </ol>
     </header>
+    <main>
+
+    </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
