--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <p>Sou professora formadora de Programação e aqui estão meus projetos desenvolvidos no GE. </p>
     <p> Minhas Habilidades</p>
     <ol>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Javascript</li>
-        <li>Python</li>
+        <span>HTML</span>
+        <span>CSS</span>
+        <span>Javascript</span>
+        <span>Python</span>
     </ol>
     </header>
     <main>
