--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Meu Portfólio</title>
 </head>
 <body>
@@ -12,12 +13,12 @@
     <p>Sou mãe da Melissa e tenho uma cachorrinha, a Skie.</p>
     <p>Sou professora formadora de Programação e aqui estão meus projetos desenvolvidos no GE. </p>
     <p> Minhas Habilidades</p>
-    <ol>
+   
         <span>HTML</span>
         <span>CSS</span>
         <span>Javascript</span>
         <span>Python</span>
-    </ol>
+   
     </header>
     <main>
 
