--- a/index.html
+++ b/index.html
@@ -1,30 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Meu Portfólio</title>
 </head>
+
 <body>
     <header>
-    <img src="./imagem/Mona_prof.png" alt="Avatar da Prof Monalize" width="200">
-    <h1>Eu sou a professora <em>Monalize</em>, sou professora de <b>Informática</b> em Londrina.</h1>
-    <p>Sou mãe da Melissa e tenho uma cachorrinha, a Skie.</p>
-    <p>Sou professora formadora de Programação e aqui estão meus projetos desenvolvidos no GE. </p>
-    <p> Minhas Habilidades</p>
-   
+        <img src="./imagem/Mona_prof.png" alt="Avatar da Prof Monalize" width="200">
+        <h1>Eu sou a professora <em>Monalize</em>, sou professora de <b>Informática</b> em Londrina.</h1>
+        <p>Sou mãe da Melissa e tenho uma cachorrinha, a Skie.</p>
+        <p>Sou professora formadora de Programação e aqui estão meus projetos desenvolvidos no GE. </p>
+        <p> Minhas Habilidades</p>
+
         <span>HTML</span>
         <span>CSS</span>
         <span>Javascript</span>
         <span>Python</span>
-   
+
     </header>
     <main>
+        <h2>Meus projetos</h2>
+        <div>
+            <h3> Projeto 1</h3>
+            <p>descrição do projeto</p>
+            <a href="#">Veja o projeto</a>
+        </div>
+        <div>
+            <h3>Projeto 2</h3>
+            <p>descrição do projeto</p>
+            <a href="#">Veja o projeto</a>
+        </div>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
+
 </html>
