--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
             <p>descrição do projeto</p>
             <a href="#">Veja o projeto</a>
         </div>
+        <div>
+            <h3>Projeto 3</h3>
+            <p>descrição do projeto</p>
+            <a href="#">Veja o projeto</a>
+        </div>
 
     </main>
     <footer>
