--- a/index.html
+++ b/index.html
@@ -24,22 +24,25 @@
     </header>
     <main>
         <h2>Meus projetos</h2>
-        <div>
-            <h3> Projeto 1</h3>
-            <p>descrição do projeto</p>
-            <a href="#">Veja o projeto</a>
-        </div>
-        <div>
-            <h3>Projeto 2</h3>
-            <p>descrição do projeto</p>
-            <a href="#">Veja o projeto</a>
-        </div>
-        <div>
-            <h3>Projeto 3</h3>
-            <p>descrição do projeto</p>
-            <a href="#">Veja o projeto</a>
-        </div>
-
+        <section>
+            <div>
+                <img src="./imagem/projeto-1.png">
+                <h3> Projeto 1</h3>
+                <p>descrição do projeto</p>
+                <a href="#">Veja o projeto</a>
+            </div>
+            <div>
+                
+                <h3>Projeto 2</h3>
+                <p>descrição do projeto</p>
+                <a href="#">Veja o projeto</a>
+            </div>
+            <div>
+                <h3>Projeto 3</h3>
+                <p>descrição do projeto</p>
+                <a href="#">Veja o projeto</a>
+            </div>
+        </section>
     </main>
     <footer>
 
