--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <header>
         <img src="./imagem/Mona_prof.png" alt="Avatar da Prof Monalize" width="200">
         <h1>Eu sou a professora <em>Monalize</em>, sou professora de <b>Informática</b> em Londrina.</h1>
+        <h1>Oi <b id="texto">Fulano</b>, eu ensino Programação</h1>
+
         <p>Sou mãe da Melissa e tenho uma cachorrinha, a Skie.</p>
         <p>Sou professora formadora de Programação e aqui estão meus projetos desenvolvidos no GE. </p>
         <p> Minhas Habilidades</p>
@@ -32,7 +34,7 @@
                 <a href="#">Veja o projeto</a>
             </div>
             <div>
-                
+
                 <h3>Projeto 2</h3>
                 <p>descrição do projeto</p>
                 <a href="#">Veja o projeto</a>
@@ -45,7 +47,7 @@
         </section>
     </main>
     <footer>
-
+        <script src="script.js"></script>
     </footer>
 </body>
 
